# TrajectorySimulator

./: CMakeLists.txt  LICENSE  README.md  launch.sh
src/: main.cpp  physics.hpp
